# dbPerfmHealthCheck

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  README.md  REFACTORED_USAGE_GUIDE.md  _apply_migration.py  _create_user_table.py  _ddl_user.py  _test_neon.py  alembic.ini  err.txt  migration.sql  neon-implementation.md  plan_query_analysis.md  plan_raw_query_tables.md  pyproject.toml  test_output.txt  test_results.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
api/: .env  analytics_db.py  backfill_month_year.py  database.py  env.template  host_system.py  main.py  models.py  neon_http.py  seed_labels.py
api/migrations/: env.py
api/routers/: analytics.py  auth.py  curated.py  export.py  labels.py  patterns.py  queries.py  spl.py  upload.py  validate.py
api/services/: auth_service.py  deadlock_parser.py  extractor.py  ingestor.py  typed_ingestor.py  validator.py
data/: ITWS_DB_Hosts.csv
data/Dec2025/: 2025DecDbPerfmonHealthCheck.xlsx  blockersDecProDedupUpdated2.csv  blockersDecProdDedup.csv  blockersDecSat.csv  blockersDecSatDedup.csv  blockersDecSatDedupUpdated2.csv  deadlocksDecProd.csv  deadlocksDecProdUpdated.csv  deadlocksDecProdUpdated2.csv  deadlocksDecSat.csv  deadlocksDecSatUpdated.csv  deadlocksDecSatUpdated2.csv  maxElapsedQueriesDecProd.csv  maxElapsedQueriesDecSat.csv  mongoSlowQDecProdUpdated.csv  mongoSlowQueriesProd.csv
data/Feb2026/: blockersProdFeb26.csv  blockersSatFeb26.csv  deadlocksProdFeb26.csv  deadlocksRawProdFeb26.csv  deadlocksRawSatFeb26.csv  maxElapsedQueriesProdFeb26.csv  maxElapsedQueriesSatFeb.csv  mongodbSlowQueriesProdFeb26.csv
data/Jan2026/: 2026JanDbPerfmonHealthCheck.xlsx  Jan2026_Database_Performance_Analysis.md  blockersProdJan26.csv  blockersSatJan26.csv  dataFileSizeProdJan26.csv  dataFileSizeSatJan26.csv  deadlocksProdJan26.csv  deadlocksSatJan26.csv  maxElapsedQueriesProdJan26.csv  maxElapsedQueriesSatJan26.csv  (+5 more)
migration/: manage.py
neon/: _apply_migration.py  _ddl_user.py  _test_neon.py  add_spl_table.py  alter_enum_to_varchar.sql  apply_alter.py  manage.py  migration.sql  neon-implementation.md  neon_schema.sql
reports/: Cross-Month_Performance_Trend_Analysis.md  Database_Performance_Patterns_Reference.md
scripts/: _backfill_fast.py  _backfill_hash.py  _backfill_text_link.py  _coverage_check.py  _debug_link.py  _diag2.py  _diag_env2.py  _diagnose_mongo.py  _remove_prob_file.py  _trace_row.py  _verify_hash_fallback.py  add_source_col.py  check_db.py  check_raw_query.py  check_upload_log.py  create_admin.py  extract_all_queries.py  extract_all_queries_refactored.py  fix_alembic_version.py  main.py  run_migration.py  test_deadlock_formats.py  validate_csv.py
tests/: _e2e_test.py  _phase4_test.py  conftest.py  test_api_analytics.py  test_api_auth.py  test_api_curated.py  test_api_export.py  test_api_labels.py  test_api_performance.py  test_api_queries.py  test_api_spl.py  test_api_validate.py  test_db_connection.py  test_deadlock_extractor.py  test_deadlock_parser.py  test_derive_month_year.py  test_ingestor.py  test_migrations.py  test_polars_migration.py  test_typed_extractor.py  test_ui_smoke.py  test_upload.py
web/: middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
(+60 files in other folders)
