[project]
name = "dbperfmhealthcheck"
version = "0.1.0"
description = "Splunk DB performance query audit, analysis, and pattern discovery"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # existing
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "ruff>=0.15.2",
    "typing>=3.10.0.0",
    # Phase 0: API + DB
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
    "polars>=1.0",
    "duckdb>=1.0",
    "pyarrow>=23.0.1",
    "bcrypt>=5.0.0",
    "python-jose>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
